# SOFAR-2020-2021-HUMAN-BAXTER-COLLABORATION

./: README.md  baxter__at__home_8cpp.html  baxter__at__home_8cpp__incl.map  baxter__at__home_8cpp__incl.md5  controller__baxter_8cpp.html  controller__baxter_8cpp__incl.map  controller__baxter_8cpp__incl.md5  dir_468f27b043d0e756cf78ef5c80fceb7f.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  go__to__home_8cpp.html  go__to__home_8cpp__incl.map  go__to__home_8cpp__incl.md5  graph_legend.html  index.html  md_docs__note_conclusive_sul_task_manager_a8dad796f45e480598de6d8c75cf5fe6.html  pages.html  task__manager_8py.html
baxter_tools/: typescript
baxter_tools/scripts/: tuck_arms.py  update_robot.py
controller_baxter/: CMakeLists.txt  package.xml  update_reposiory
controller_baxter/docs/: Note conclusive sul task manager a8dad796f45e480598de6d8c75cf5fe6.md  Note conclusive sul task manager.md  Note sul task manager.md
controller_baxter/docs/input_from_unity/: tf_topic_out.txt  unity_tf_output.txt
controller_baxter/include/controller_baxter/: sim_infos.py
controller_baxter/launch/: controller_baxter.launch
controller_baxter/scripts/: debug.py  task_manager.py  task_manager_2.py
controller_baxter/src/: baxter_at_home.cpp  collision_avoidance.cpp  controller_baxter.cpp  go_to_home.cpp
controller_baxter/srv/: at_home.srv  command.srv
dependencies/human_baxter_collaboration/config/: params.yaml
human_baxter_collaboration/launch/: human_baxter_collaboration.launch  joint_trajectory_client.launch  ompl_planning_pipeline.launch  planning_pipeline.launch
human_baxter_collaboration/msg/: BaxterResultTrajectory.msg  BaxterStopTrajectory.msg
real robot implementation/: esecuzione.md
real robot implementation/baxter_tools/scripts/: camera_control.py  smoke_test.py
real robot implementation/baxter_tools/src/baxter_tools/: smoketests.py
real robot implementation/controller_baxter/: setup.py
real robot implementation/controller_baxter/launch/: collaboration.launch
real robot implementation/controller_baxter/scripts/: task_manager.py
real robot implementation/controller_baxter/srv/: at_home.srv
real robot implementation/human_baxter_collaboration/: CMakeLists.txt
real robot implementation/human_baxter_collaboration/config/: params.yaml
real robot implementation/human_baxter_collaboration/launch/: demo.launch  move_group.launch
real robot implementation/human_baxter_collaboration/msg/: BaxterGripperOpen.msg
real robot implementation/human_baxter_collaboration/scripts/: joint_trajectory_client.py  server_endpoint_hrc.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
